# actix_learning

./: .env.example  .gitignore  Actix Learning.postman_collection.json  Cargo.toml  readme.md
src/: cth.rs  main.rs  sandbox.rs
src/handler/: mod.rs
src/handler/interface/: mod.rs
src/handler/models/: user.rs
src/handler/operator/: auth.rs  mod.rs  profile.rs
src/handler/validation/: mod.rs
tests/: jwt_test.rs  password_test.rs  random.rs  validation_test.rs
