[package]
name = "actix-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
mongodb = "2.3.1"
dotenv = "0.15.0"
hmac-sha512 = "1.1.4"
sha-crypt = "0.4.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
futures-util = "0.3.25"
regex = "1"
actix-cors = "0.6.4"
actix-multipart = "0.5.0"
image = "0.24.5"
bytes = "1.4.0"
rand = "0.8.5"
